[package]
name = "bitbucket-cli"
version = "0.1.4"
authors = ["Matt Chun-Lum <mchunlum@gmail.com>"]

[[bin]]
bench = false
path = "src/main.rs"
name = "bb"

[profile.release]
lto = true

[dependencies]
clap = { version = "2.18.0", features = ["yaml"] }
eprompt = { git = "https://github.com/mattcl/eprompt.git" }
error-chain = "0.4"
git2 = "0.5"
hyper = ">0.9.10"
prettytable-rs = "^0.6"
rpassword = "0.3"
rustc-serialize = "*"
url = "*"
yaml-rust = "*"
